--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
     <div class="brand">FIT KITCHEN</div>
     <div class="road-container">
       <div class="vehicle">
-        <img src="bike.png" alt="Delivery Bike" />
+        <img src="BIKE.PNG" alt="Delivery Bike" />
         <div class="wheel left"></div>
         <div class="wheel right"></div>
         <div class="smoke"></div>
@@ -529,10 +529,10 @@
     <div class="dish-card"><img src="s2.jpg" alt="" /><div class="dish-info"><div class="dish-title">Tofu Power Wrap</div><div class="dish-desc">Grilled tofu, hummus & salad.</div></div></div>
     <div class="dish-card"><img src="s3.jpg" alt="" /><div class="dish-info"><div class="dish-title">Protein Pasta</div><div class="dish-desc">High-protein pasta with veggies.</div></div></div>
     <div class="dish-card"><img src="s4.jpg" alt="" /><div class="dish-info"><div class="dish-title">Muscle Meal Bowl</div><div class="dish-desc">Chicken, rice, beans & greens.</div></div></div>
-    <div class="dish-card"><img src="s5.jpg" alt="" /><div class="dish-info"><div class="dish-title">Oats Energy Bar</div><div class="dish-desc">Baked oats, peanut butter snack.</div></div></div>
-    <div class="dish-card"><img src="s6.jpg" alt="" /><div class="dish-info"><div class="dish-title">Keto Cut Meal</div><div class="dish-desc">Low-carb egg & avocado plate.</div></div></div>
-    <div class="dish-card"><img src="s7.jpg" alt="" /><div class="dish-info"><div class="dish-title">Vitamin Salad</div><div class="dish-desc">Loaded leafy greens & citrus.</div></div></div>
-    <div class="dish-card"><img src="s8.jpg" alt="" /><div class="dish-info"><div class="dish-title">Post Workout Shake</div><div class="dish-desc">Whey + banana + peanut butter.</div></div></div>
+    <div class="dish-card"><img src="s1.jpg" alt="" /><div class="dish-info"><div class="dish-title">Oats Energy Bar</div><div class="dish-desc">Baked oats, peanut butter snack.</div></div></div>
+    <div class="dish-card"><img src="s2.jpg" alt="" /><div class="dish-info"><div class="dish-title">Keto Cut Meal</div><div class="dish-desc">Low-carb egg & avocado plate.</div></div></div>
+    <div class="dish-card"><img src="s3.jpg" alt="" /><div class="dish-info"><div class="dish-title">Vitamin Salad</div><div class="dish-desc">Loaded leafy greens & citrus.</div></div></div>
+    <div class="dish-card"><img src="s4.jpg" alt="" /><div class="dish-info"><div class="dish-title">Post Workout Shake</div><div class="dish-desc">Whey + banana + peanut butter.</div></div></div>
   </div>
 </section>
 
